# vlt-syslogd

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.ko.md  README.md  README.tw.md  README.vi.md  README.zh.md  README_ja.md  README_ko.md  README_tw.md  README_vi.md  README_zh.md  TEST_TOOL.md  build.rs  embed_icon.py  test_sender.rs
.agents-relay/: session.json
BLOG/: 20260130_dev_story.md
Console/: Cargo.toml  build.rs
Console/src/: control.rs  macos_menu.rs  main.rs  net.rs  parser.rs  platform.rs  service.rs  settings.rs
DOCS/: BUILD.ja.md  BUILD.md  INSTALL.ja.md  INSTALL.linux.ja.md  INSTALL.linux.md  INSTALL.macos.ja.md  INSTALL.macos.md  INSTALL.md  INSTALL.windows.ja.md  INSTALL.windows.md  REFERENCE.ja.md  REFERENCE.md  VERSION_HISTORY.ja.md  VERSION_HISTORY.ko.md  VERSION_HISTORY.md  VERSION_HISTORY.tw.md  VERSION_HISTORY.vi.md  VERSION_HISTORY.zh.md  VERSION_HISTORY_ko.md  VERSION_HISTORY_tw.md  VERSION_HISTORY_vi.md  VERSION_HISTORY_zh.md  console_design.md  console_status_report.md  console_test_guide.md  portable_macos_port_behavior.md  syslog_verification_report.ja.md  syslog_verification_report.ko.md  syslog_verification_report.md  syslog_verification_report.tw.md  syslog_verification_report.vi.md  syslog_verification_report.zh.md  syslog_verification_report_en.md  syslog_verification_report_ko.md  syslog_verification_report_tw.md  syslog_verification_report_vi.md  syslog_verification_report_zh.md
IDEA/: vlt_syslogd_roadmap.md
Portable/: Cargo.toml  build-macos.sh  build.rs
Portable/examples/: font_probe.rs
Portable/src/: macos_menu.rs  main.rs  parser.rs  platform.rs  settings.rs
Server/: Cargo.toml  README.md  build.rs  install-linux.sh  install-macos.sh  install-windows.ps1  uninstall-linux.sh  uninstall-macos.sh  uninstall-windows.ps1
Server/src/: config.rs  main.rs  parser.rs  platform.rs
icons/: resize_256.py  vlt-syslogd.icns
scripts/: crop_master_icon.py  demo-feed.sh  embed_icon.py  generate_ico.ps1  generate_ico_final.ps1  generate_ico_v10_standard.ps1  generate_ico_v2.ps1  generate_ico_v3.ps1  generate_ico_v4.ps1  generate_ico_v5.ps1  generate_ico_v6_pixel.ps1  generate_ico_v7_local.ps1  generate_ico_v8_raw.ps1  generate_ico_v9_safe.ps1  run-macos.sh  run-portable.sh
src/: main.rs  parser.rs
