# vlt-syslogd ワークスペース
#
# 3つのメンバークレートで構成する(OS では分けない。動作モデルで分ける):
#   - Portable : GUI ビューア。自分で syslog を待ち受ける単体版。
#   - Server   : 標準 514 で待ち受ける常駐デーモン(エンジン)。
#   - Console  : GUI フロントエンド。常駐サービス(Server)に TCP 接続してログを表示する。
#
# 共通ロジック(syslog パーサ等)は各クレート内に持つ。OS 差は各クレートの
# platform 系モジュールに集約し、ここでは分割しない。
[workspace]
resolver = "2"
members = ["Portable", "Server", "Console"]
