[package]
name = "vlt-syslog-portable"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["veltrea <veltrea@outlook.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
eframe = "0.27"
egui = "0.27"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
single-instance = "0.3"
image = "0.25.9"
encoding_rs = "0.8"
chardetng = "0.1"
hex = "0.4"

[build_dependencies]
winres = "0.1"
